--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,10 +20,10 @@
         <item>Popular</item>
         <item>Top Rated</item>
     </string-array>
-    <string-array name="pref_example_list_values">
+    <integer-array name="pref_example_list_values">
         <item>1</item>
         <item>0</item>
-    </string-array>
+    </integer-array>
 
     <!-- Example settings for Data & Sync -->
     <string name="pref_header_data_sync">Data &amp; sync</string>
