--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,14 +16,15 @@
     <string name="pref_default_display_name">John Smith</string>
 
     <string name="pref_title_sort">Sort</string>
+    <string name="def_value_sort">popular</string>
     <string-array name="pref_example_list_titles">
         <item>Popular</item>
         <item>Top Rated</item>
     </string-array>
-    <integer-array name="pref_example_list_values">
-        <item>1</item>
-        <item>0</item>
-    </integer-array>
+    <string-array name="pref_example_list_values">
+        <item>popular</item>
+        <item>top_rated</item>
+    </string-array>
 
     <!-- Example settings for Data & Sync -->
     <string name="pref_header_data_sync">Data &amp; sync</string>
@@ -58,4 +59,6 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="settings">Settings</string>
+    <string name="sort_key">sort</string>
+    <string name="stars">" stars"</string>
 </resources>
